--- a/src/main/resources/assets/endonium/lang/en_us.json
+++ b/src/main/resources/assets/endonium/lang/en_us.json
@@ -14,6 +14,8 @@
   "item.endonium.endonium_chestplate": "Endonium Chestplate",
   "item.endonium.endonium_leggings": "Endonium Leggings",
   "item.endonium.endonium_boots": "Endonium Boots",
+  "block.endonium.enite_ore": "Enite Ore",
+  "block.endonium.endonium_block": "Endonium Block",
 
   "itemGroup.endonium.modmenu": "Endonium Items"
 }
