Added 18 new recipes

--- a/src/main/resources/assets/endonium/lang/en_us.json
+++ b/src/main/resources/assets/endonium/lang/en_us.json
@@ -2,8 +2,8 @@
 
   "item.endonium.endonium": "Endonium",
   "item.endonium.enite": "Enite",
-  "item.endonium.melteddiamond": "Melted Diamond",
-  "item.endonium.meltedenite": "Melted Enite",
+  "item.endonium.melteddiamond": "Molten Diamond",
+  "item.endonium.meltedenite": "Molten Enite",
   "item.endonium.endory": "Endory",
   "item.endonium.endonium_sword": "Endonium Sword",
   "item.endonium.endonium_shovel": "Endonium Shovel",
